<resources>
    <string name="app_name">MyMobApplication4</string>
    <string name="stop_text">Stop</string>
    <string name="pause_text">Pause</string>
    <string name="play_text">Play</string>
    <string name="play">Music</string>
    <string name="music1">Summertime Sadness</string>
    <string name="music2">Come As You Are</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="download">Download</string>
    <string name="play_video">Play</string>
    <string name="enter_video_link">Enter video link</string>
    <string name="enter_link">Enter link...</string>
</resources>
