<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/music1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music1" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/play1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_text"/>

        <Button
            android:id="@+id/pause1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_text" />

        <Button
            android:id="@+id/stop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_text"/>
    </GridLayout>

    <TextView
        android:id="@+id/music2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music2" />

    <GridLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/play2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_text"/>

        <Button
            android:id="@+id/pause2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_text" />

        <Button
            android:id="@+id/stop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_text"/>
    </GridLayout>


</LinearLayout>